--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve"
+    "start": "webpack-dev-server -d -w"
   },
   "babel": {
     "presets": [
@@ -19,16 +19,17 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@webpack-cli/serve": "^1.3.1",
     "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^8.1.1",
+    "copy-webpack-plugin": "6",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.2"
   },
   "dependencies": {
     "react": "^17.0.1",
