--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@babel/preset-react": "^7.9.4",
     "@webpack-cli/serve": "^1.3.1",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
     "style-loader": "^2.0.0",
